[tool.poetry]
name = "se_postgresql"
version = "0.1.0"
description = ""
authors = ["DripCharacter <wsms8646@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.3"
pandas = "^1.4.2"
numpy = "^1.22.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
